--- a/Kosuke_Appdojo_Part09/Base.lproj/Main.storyboard
+++ b/Kosuke_Appdojo_Part09/Base.lproj/Main.storyboard
@@ -16,23 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="都道府県" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dW1-ah-Nv9">
-                                <rect key="frame" x="20" y="108" width="70" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="都道府県" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dW1-ah-Nv9">
+                                <rect key="frame" x="20" y="114" width="69.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="eqe-7O-x08"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="未選択" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55U-m4-4XN">
-                                <rect key="frame" x="148" y="108" width="119" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未選択" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55U-m4-4XN">
+                                <rect key="frame" x="181" y="114" width="52" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="elS-UL-FLJ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="icz-EU-j9y">
-                                <rect key="frame" x="327" y="108" width="31" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="icz-EU-j9y">
+                                <rect key="frame" x="363" y="114" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="9Pk-HQ-NuR"/>
+                                </constraints>
                                 <state key="normal" title="入力"/>
                                 <connections>
                                     <segue destination="6kC-eU-rEc" kind="presentation" identifier="NextSegue" id="Gkc-eR-LZA"/>
@@ -41,6 +47,16 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="dW1-ah-Nv9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="4m9-rO-zrv"/>
+                            <constraint firstItem="55U-m4-4XN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="dW1-ah-Nv9" secondAttribute="trailing" constant="8" symbolic="YES" id="9bb-vA-KMY"/>
+                            <constraint firstItem="icz-EU-j9y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="Ap7-hn-Ddc"/>
+                            <constraint firstItem="55U-m4-4XN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="G8Q-gd-9oK"/>
+                            <constraint firstItem="icz-EU-j9y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="55U-m4-4XN" secondAttribute="trailing" constant="8" symbolic="YES" id="SJN-Pt-mxP"/>
+                            <constraint firstItem="55U-m4-4XN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="ib1-eK-049"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="icz-EU-j9y" secondAttribute="trailing" constant="20" id="rp9-Pa-0JD"/>
+                            <constraint firstItem="dW1-ah-Nv9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="70" id="t7v-MT-5t9"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="label" destination="55U-m4-4XN" id="0DF-38-nYP"/>
@@ -58,33 +74,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXS-wB-tpY">
-                                <rect key="frame" x="184" y="165" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXS-wB-tpY">
+                                <rect key="frame" x="184" y="156" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4gF-sS-zQn"/>
+                                </constraints>
                                 <state key="normal" title="東京都"/>
                                 <connections>
                                     <segue destination="2Nh-yT-dQV" kind="unwind" unwindAction="exitWithSegue:" id="AjT-kN-CWD"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GV2-rn-NHe">
-                                <rect key="frame" x="176" y="211" width="62" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GV2-rn-NHe">
+                                <rect key="frame" x="176" y="206" width="62" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="NQZ-Tf-XIo"/>
+                                </constraints>
                                 <state key="normal" title="神奈川県"/>
                                 <connections>
                                     <segue destination="2Nh-yT-dQV" kind="unwind" unwindAction="exitWithSegue:" id="i7W-yf-U3e"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lv7-vJ-B9a">
-                                <rect key="frame" x="184" y="262" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lv7-vJ-B9a">
+                                <rect key="frame" x="184" y="256" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="t2X-y4-I6E"/>
+                                </constraints>
                                 <state key="normal" title="埼玉県"/>
                                 <connections>
                                     <segue destination="2Nh-yT-dQV" kind="unwind" unwindAction="exitWithSegue:" id="55k-rc-Ecd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CoP-mr-eyH">
-                                <rect key="frame" x="184" y="312" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CoP-mr-eyH">
+                                <rect key="frame" x="184" y="306" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="9u6-Ng-KKC"/>
+                                </constraints>
                                 <state key="normal" title="千葉県"/>
                                 <connections>
                                     <segue destination="2Nh-yT-dQV" kind="unwind" unwindAction="exitWithSegue:" id="HK0-oe-ZXQ"/>
@@ -93,6 +117,19 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="iMc-Eb-MBL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="GV2-rn-NHe" firstAttribute="centerX" secondItem="dXS-wB-tpY" secondAttribute="centerX" id="4tj-1C-Dcd"/>
+                            <constraint firstItem="dXS-wB-tpY" firstAttribute="top" secondItem="iMc-Eb-MBL" secondAttribute="top" constant="100" id="5ap-FM-YBo"/>
+                            <constraint firstItem="lv7-vJ-B9a" firstAttribute="centerX" secondItem="dXS-wB-tpY" secondAttribute="centerX" id="B3a-P5-3Vz"/>
+                            <constraint firstItem="GV2-rn-NHe" firstAttribute="top" secondItem="dXS-wB-tpY" secondAttribute="bottom" constant="20" id="C16-8y-jmG"/>
+                            <constraint firstItem="lv7-vJ-B9a" firstAttribute="top" secondItem="GV2-rn-NHe" secondAttribute="bottom" constant="20" id="PHL-Ox-zpO"/>
+                            <constraint firstItem="lv7-vJ-B9a" firstAttribute="top" secondItem="GV2-rn-NHe" secondAttribute="bottom" constant="20" id="Pkf-O6-GN6"/>
+                            <constraint firstItem="GV2-rn-NHe" firstAttribute="top" secondItem="dXS-wB-tpY" secondAttribute="bottom" constant="20" id="S2M-iA-d1u"/>
+                            <constraint firstItem="dXS-wB-tpY" firstAttribute="centerX" secondItem="eKp-uu-uC7" secondAttribute="centerX" id="S5E-cl-fdP"/>
+                            <constraint firstItem="CoP-mr-eyH" firstAttribute="centerX" secondItem="dXS-wB-tpY" secondAttribute="centerX" id="fcs-IZ-h1f"/>
+                            <constraint firstItem="CoP-mr-eyH" firstAttribute="top" secondItem="lv7-vJ-B9a" secondAttribute="bottom" constant="20" id="iji-gt-dao"/>
+                            <constraint firstItem="CoP-mr-eyH" firstAttribute="top" secondItem="lv7-vJ-B9a" secondAttribute="bottom" constant="20" id="mvy-hu-EbG"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3e3-O6-rIQ">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="3lh-hU-7K2">
